componente-patrones-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: componente-patrones
  labels:
    app: componente-patrones
spec:
  replicas: 1
  selector:
    matchLabels:
      app: componente-patrones
  template:
    metadata:
      labels:
        app: componente-patrones
    spec:
      containers:
        - image: 'danielsabana/componente_patrones:d774afaa197c03d80984116320111dc755f24e75'
          name: componente-patrones
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "170m"
              memory: "500Mi"
            limits:
              cpu: "400m"
