componente-patrones-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: componente-patrones
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: componente-patrones
  type: ClusterIP
