componente-patrones-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: componente-patrones
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Redirige HTTP a HTTPS si tienes TLS configurado
    nginx.ingress.kubernetes.io/use-regex: "true" 
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: componente-patrones
            port:
              number: 80
        path: /
        pathType: Prefix
